src/objects/Option__c.object
<CustomObject>
    <fields>
        <fullName>Commencement_Date__c</fullName>
        <label>Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lease__c</fullName>
        <label>Lease</label>
        <referenceTo>Sale__c</referenceTo>
        <relationshipLabel>Options</relationshipLabel>
        <relationshipName>Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Notice_Address__c</fullName>
        <label>Notice Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notice_End__c</fullName>
        <label>Notice End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notice_Provisions__c</fullName>
        <label>Notice Provisions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notice_Start__c</fullName>
        <label>Notice Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contraction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expansion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termination</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Option</label>
    <nameField>
        <displayFormat>Opt-{0000000}</displayFormat>
        <label>Option Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>